@@ -139,6 +139,7 @@ following names for their contribution to the product.
 * Umherirrender
 * Ville Stadista
 * Zachary Hauri
+* Jarry1250
 
 == Translators ==
 * Anders Wegge Jakobsen
